--- a/src/components/BoxNumber/styles.module.scss
+++ b/src/components/BoxNumber/styles.module.scss
@@ -1,6 +1,6 @@
 .container{
 
-  border: 1px solid #efefef;
+  border: 1px solid #689cda2b;
   border-radius: 0.7rem;
   padding: 1rem 2rem 1rem 2rem;
   box-shadow: 8px 9px 11px rgba(0, 0, 0, 0.03);
@@ -8,7 +8,7 @@
   
   transition: all 0.2s ease;
 
-  background-color: var(--white);
+  background-color: #ffffff0f;
 
   &:hover {
     transform: translateY(-10px) scale(1.02,1.02);
