--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -117,7 +117,7 @@
 // }
 
 .header {
-  background-color: var(--white);
+  background-color: var(--bg-color);
   width: 100%;
   height: 120px;
   padding: 0 1.5rem;
@@ -160,7 +160,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      background-color: #ffffffeb;
+      background-color: var(--bg-menu-color);
       backdrop-filter: blur(3px);
       transform: translate(0);
       transition: 0.3s ease transform;
@@ -175,6 +175,14 @@
         li {
           &:not(:last-child) {
             margin-bottom: 0.9rem;
+          }
+
+          .themeColor {
+            background: #3e7cc5;
+            color: #ffffff;
+            padding: 5px 5px 2px 5px;
+            border-radius: 13px;
+            cursor: pointer;
           }
 
           a {
