--- a/src/styles/Index.module.scss
+++ b/src/styles/Index.module.scss
@@ -29,15 +29,18 @@
 
         button {
           padding: 1rem 2rem;
-          border-radius: 0.5rem;
+          border-radius: 2rem;
           background-color: var(--blue-500-40);
           color: var(--blue-500);
           font-size: 1.2rem;
-
+          -webkit-box-shadow: 0px 16px 21px 0px rgba(232,232,232,0.81);
+          -moz-box-shadow: 0px 16px 21px 0px rgba(232,232,232,0.81);
+          box-shadow: 0px 16px 21px 0px  rgba(232,232,232,0.81);
           transition: all 0.2s ease;
 
           &:hover {
-            filter: brightness(0.7);
+            // filter: brightness(0.7);
+            box-shadow: none;
           }
 
           &:active {
