--- a/src/components/BoxIconLeft/styles.module.scss
+++ b/src/components/BoxIconLeft/styles.module.scss
@@ -1,18 +1,17 @@
-.container{
-
+.container {
   border: 1px solid #ffffff0f;
   border-radius: 0.7rem;
   padding: 0 2rem 0 0;
   box-shadow: 8px 9px 11px rgba(0, 0, 0, 0.03);
   cursor: default;
-  background-color: var(--bg-gradient-strip-color);
+  background-color: var(--white);
   display: flex;
 
   transition: all 0.2s ease;
 
   &:hover {
     transform: translateY(-4px);
-    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.1);
   }
 
   div:first-child {
@@ -34,14 +33,14 @@
     font-size: 2rem;
   }
 
-  h4{
+  h4 {
     font-size: 2rem;
     color: var(--blue-500);
     margin-top: 1.4rem;
     margin-bottom: 1rem;
   }
 
-  p{
+  p {
     font-size: 1.3rem;
     color: var(--gray-500);
     font-weight: 300;
