--- a/src/styles/Sobre.module.scss
+++ b/src/styles/Sobre.module.scss
@@ -99,9 +99,34 @@
         }
       }
     }
+
+    .parceiros {
+      margin-top: 4rem;
+
+      h3 {
+        font-size: 2rem;
+        color: var(--gray-600);
+      }
+
+      .parceirosLogoBox {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 1rem;
+        padding-top: 1.5rem;
+
+        img {
+          width: 100%;
+          // height: 150px;
+          padding: 0.8rem;
+          border: 1px solid #e5e5e5;
+          border-radius: 0.5rem;
+          object-fit: scale-down;
+          background-color: #ffffff;
+        }
+      }
+    }
   }
 }
-
 
 @media (max-width: 720px) {
   .container {
@@ -110,8 +135,12 @@
         grid-template-columns: 1fr;
       }
       .technologies {
-  
         .techLogoBox {
+          grid-template-columns: repeat(3, 1fr);
+        }
+      }
+      .parceiros {
+        .parceirosLogoBox {
           grid-template-columns: repeat(3, 1fr);
         }
       }
@@ -127,6 +156,11 @@
           grid-template-columns: repeat(2, 1fr);
         }
       }
+      .parceiros {
+        .parceirosLogoBox {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
     }
   }
 }
@@ -137,6 +171,11 @@
       .technologies {
         .techLogoBox {
           grid-template-columns: 1fr;
+        }
+      }
+      .parceiros {
+        .parceirosLogoBox {
+          grid-template-columns: repeat(1, 1fr);
         }
       }
     }
