--- a/src/styles/Index.module.scss
+++ b/src/styles/Index.module.scss
@@ -106,12 +106,14 @@
         }
 
         div {
+          font-size: 1.3rem;
           ul {
             margin-top: 1rem;
             margin-left: 1.3rem;
             font-size: 1.2rem;
           }
         }
+
         .appStoreBadges {
           display: flex;
           gap: 1rem;
